--- a/CSManagement/CSManagement/Views/Students/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Students/Index.cshtml
@@ -30,35 +30,31 @@
             <tbody>
                 @foreach (var item in Model)
                 {
-                    <tr>
-                        <td>@(i++)</td>
-                        <td>@Html.DisplayFor(modelItem => item.Stu_ID)</td>
-                        <td>@item.Stu_Title @item.Stu_Name @item.Stu_Surname</td>
-                        <td>@Html.DisplayFor(modelItem => item.Stu_Birthday)</td>
-                        <td>@Html.DisplayFor(modelItem => item.Stu_Tel)</td>
-                        @* 1 = กำลังศึกษา / 2 = จบการศึกษา / 3 = ไม่สำเร็จการศึกษา *@
-                        @if (item.Stu_StatusID == 1)
-                        {
-                            <td style="color:blue">@Html.DisplayFor(modelItem => item.Status.Status_Name)</td>
-                        }
-                        else if (item.Stu_StatusID == 2)
-                        {
-                            <td style="color:green">@Html.DisplayFor(modelItem => item.Status.Status_Name)</td>
-                        }
-                        else if (item.Stu_StatusID == 3)
-                        {
-                            <td style="color:red">@Html.DisplayFor(modelItem => item.Status.Status_Name)</td>
-                        }
-                        else
-                        {
-                            <td style="color:black">@Html.DisplayFor(modelItem => item.Status.Status_Name)</td>
-                        }
-                        <td>
-                            <a class="btn btn-warning" href="@Url.Action("Edit", "Students", new { id = item.Stu_ID })"><i class="fa fa-edit"></i>แก้ไข</a>
-                            <a class="btn btn-info" href="@Url.Action("Details", "Students", new { id = item.Stu_ID })"><i class="fa fa-list-ul"></i> รายละเอียด</a>
-                            <a class="btn btn-danger" href="@Url.Action("Delete", "Students", new { id = item.Stu_ID })"><i class="fa  fa-trash-o"></i> ลบ</a>
-                        </td>
-                    </tr>
+                <tr>
+                    <td>@(i++)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Stu_ID)</td>
+                    <td>@item.Stu_Title @item.Stu_Name @item.Stu_Surname</td>
+                    <td>@Html.DisplayFor(modelItem => item.Stu_Birthday)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Stu_Tel)</td>
+                    @* 1 = กำลังศึกษาอยู่ / 2 = สำเร็จการศึกษา / 3 = เกียรตินิยมอันดับ 1 / 4 = เกียรตินิยมอันดับ 2 / 5 = พ้นสภาพการเป็นนักศึกษา / 6 = พักการเรียน *@
+                    @if (item.Stu_StatusID == 3)
+                    {
+                        <td style="color:red">@Html.DisplayFor(modelItem => item.Status.Status_Name)</td>
+                    }
+                    else if (item.Stu_StatusID == 4)
+                    {
+                        <td style="color:darkorange">@Html.DisplayFor(modelItem => item.Status.Status_Name)</td>
+                    }
+                    else
+                    {
+                        <td>@Html.DisplayFor(modelItem => item.Status.Status_Name)</td>
+                    }
+                    <td style="text-align:center">
+                        <a class="btn btn-warning" href="@Url.Action("Edit", "Students", new { id = item.Stu_ID })"><i class="fa fa-edit"></i>แก้ไข</a>
+                        <a class="btn btn-info" href="@Url.Action("Details", "Students", new { id = item.Stu_ID })"><i class="fa fa-list-ul"></i> รายละเอียด</a>
+                        <a class="btn btn-danger" href="@Url.Action("Delete", "Students", new { id = item.Stu_ID })"><i class="fa  fa-trash-o"></i> ลบ</a>
+                    </td>
+                </tr>
                 }
             </tbody>
         </table>
