--- a/CSManagement/CSManagement/Views/ComputerEquipments/Create.cshtml
+++ b/CSManagement/CSManagement/Views/ComputerEquipments/Create.cshtml
@@ -1,7 +1,6 @@
 ﻿@model CSManagement.Models.ComputerEquipment
 
 @{
-    ViewBag.Title = "Create";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
@@ -13,7 +12,7 @@
     <section class="content">
         <div class="box box-default">
             <div class="box-header with-border">
-                <h3 class="box-title">เพิ่มข้อมูลอาจารย์</h3>
+                <h3 class="box-title">เพิ่มข้อมูลครุภัณฑ์</h3>
 
                 <div class="box-tools pull-right">
                     <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
@@ -92,17 +91,13 @@
 
                 <hr />
                 <div class="text-center">
-                    <button type="submit" class="btn btn-success col-lg-3" style="float:right;font-size:18px"><i class="fa fa-save"></i> บันทึกข้อมูล</button>
-                    <a class="btn btn-default col-lg-3" style="float:left;font-size:18px" href="@Url.Action("Index", "Teachers")"><i class="fa fa-mail-reply "></i> ย้อนกลับ</a>
+                    <button type="submit" class="btn btn-success col-lg-3" style="float:right;font-size:15px"><i class="fa fa-save"></i> บันทึกข้อมูล</button>
+                    <a class="btn btn-default col-lg-3" style="float:left;font-size:15px" href="@Url.Action("Index", "ComputerEquipments")"><i class="fa fa-mail-reply "></i> ย้อนกลับ</a>
                 </div>
             </div>
         </div>
     </section>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
@@ -124,5 +119,4 @@
         });
 
     });
-
 </script>
