--- a/CSManagement/CSManagement/Views/Courses/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Courses/Index.cshtml
@@ -1,64 +1,77 @@
 ﻿@model IEnumerable<CSManagement.Models.Course>
-
 @{
-    ViewBag.Title = "Index";
+
     Layout = "~/Views/Shared/_Layout.cshtml";
+    int i = 1;
 }
 
-<h2>Index</h2>
+<section class="content">
+    <div class="box box-default">
+        <div class="box-header with-border">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="box-title">จัดการข้อมูลหลักสูตร</h1>
+                    <div style="float:right">
+                        <a class="btn btn-success" href="@Url.Action("Create", "Courses")"><i class="fa fa-plus"></i> เพิ่มข้อมูลหลักสูตร</a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Course_NameTH)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Course_NameENG)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Course_Year)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Course_DegreeTH)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Course_DegreeENG)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Course_Credit)
-        </th>
-        <th></th>
-    </tr>
+        <div class="box-body">
+            <table id="example1" class="table table-bordered table-striped" style="width:100%">
+                <thead>
+                    <tr>
+                        <th style="text-align:center">ที่</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Course_NameTH)</th>
+                        <th style="text-align:center">ประจำปี</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Course_DegreeTH)</th>
+                        <th style="text-align:center">จำนวนหน่วยกิต</th>
+                        <th style="text-align:center">จัดการข้อมูล</th>
+                    </tr>
+                </thead>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Course_NameTH)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Course_NameENG)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Course_Year)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Course_DegreeTH)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Course_DegreeENG)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Course_Credit)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Course_ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Course_ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Course_ID })
-        </td>
-    </tr>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td style="text-align:center">@(i++)</td>
+                            <td>@Html.DisplayFor(modelItem => item.Course_NameTH)</td>
+                            <td style="text-align:center">@Html.DisplayFor(modelItem => item.Course_Year)</td>
+                            <td>@Html.DisplayFor(modelItem => item.Course_DegreeTH)</td>
+                            <td style="text-align:center">@Html.DisplayFor(modelItem => item.Course_Credit)</td>
+                            <td style="text-align:center">
+                                <a class="btn btn-warning" href="@Url.Action("Edit", "Courses", new { id = item.Course_ID })"><i class="fa fa-edit"></i>แก้ไข</a>
+                                <a class="btn btn-info" href="@Url.Action("Details", "Courses", new { id = item.Course_ID })"><i class="fa fa-list-ul"></i> รายละเอียด</a>
+                                @*<a class="btn btn-danger" href="@Url.Action("Delete", "Courses", new { id = item.Course_ID })"><i class="fa  fa-trash-o"></i> ลบ</a>*@
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</section>
+
+<link href="~/Content/DataTables/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+@section Scripts{
+    <script src="~/Scripts/DataTables/jquery.dataTables.min.js"></script>
+    <script src="~/Scripts/DataTables/dataTables.bootstrap.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('#example1').DataTable({
+                scrollCollapse: true,
+                autoWidth: false,
+                responsive: true,
+                language: {
+                    url: "//cdn.datatables.net/plug-ins/1.10.19/i18n/Thai.json"
+                },
+                columnDefs: [{
+                    targets: "datatable-nosort",
+                    orderable: false
+                }]
+            });
+        });
+    </script>
 }
-
-</table>
