--- a/CSManagement/CSManagement/Views/Departments/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Departments/Edit.cshtml
@@ -1,58 +1,57 @@
 ﻿@model CSManagement.Models.Department
 
 @{
-    ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Edit</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Department</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Dep_ID)
+    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.HiddenFor(model => model.Dep_ID)
+    @Html.HiddenFor(model => model.Dep_ID)
+    <section class="content">
+        <div class="box box-default">
+            <div class="box-header with-border">
+                <h3 class="box-title">แก้ไขข้อมูลหมวดหมู๋วิชา</h3>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.Dep_Name, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Dep_Name, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Dep_Name, "", new { @class = "text-danger" })
+                <div class="box-tools pull-right">
+                    <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i></button>
+                    <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-remove"></i></button>
+                </div>
+            </div>
+            <!-- /.box-header -->
+            <div class="box-body">
+                <div class="row">
+                    <div class="col-lg-4">
+                        @Html.LabelFor(model => model.Course.Course_NameTH, htmlAttributes: new { @class = "control-label" })
+                        @Html.DropDownList("Dep_CourseID", null, "กรุณาเลือกหลักสูตร", htmlAttributes: new { @class = "form-control" })
+                        @Html.ValidationMessageFor(model => model.Course.Course_NameTH, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="col-lg-4">
+                        @Html.LabelFor(model => model.Dep_Name, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Dep_Name, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Dep_Name, "", new { @class = "text-danger" })
+                    </div>
+
+                    <div class="col-lg-4">
+                        @Html.LabelFor(model => model.Dep_Credit, htmlAttributes: new { @class = "control-label" })
+                        @Html.EditorFor(model => model.Dep_Credit, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Dep_Credit, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <hr />
+                <div class="text-center">
+                    <button type="submit" class="btn btn-success col-lg-3" style="float:right;font-size:15px"><i class="fa fa-save"></i> บันทึกข้อมูล</button>
+                    <a class="btn btn-default col-lg-3" style="float:left;font-size:15px" href="@Url.Action("Index", "Departments")"><i class="fa fa-mail-reply "></i> ย้อนกลับ</a>
+                </div>
             </div>
         </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Dep_Credit, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.Dep_Credit, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Dep_Credit, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.Dep_CourseID, "Dep_CourseID", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("Dep_CourseID", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.Dep_CourseID, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
-            </div>
-        </div>
-    </div>
+    </section>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
