--- a/CSManagement/CSManagement/Views/Departments/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Departments/Index.cshtml
@@ -1,46 +1,50 @@
 ﻿@model IEnumerable<CSManagement.Models.Department>
-
+@using CSManagement.Models;
 @{
-    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    int i = 1;
 }
 
-<h2>Index</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Dep_Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Dep_Credit)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Course.Course_NameTH)
-        </th>
-        <th></th>
-    </tr>
+<div class="box">
+    <div class="box-header">
+        <div class="row">
+            <div class="col-md-12 col-sm-12">
+                <h1 class="box-title">จัดการข้อมูลหมวดหมู่วิชา</h1>
+                <a class="btn btn-success" style="float: right" href="@Url.Action("Create", "Departments")"><i class="fa fa-user-plus"></i>เพิ่มข้อมูลนักศึกษา</a>
+            </div>
+        </div>
+    </div>
+    <div class="box-body">
+        <table id="example1" class="table table-bordered table-striped" style="width:100%">
+            <thead>
+                <tr>
+                    <th style="text-align:center">ที่</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Dep_Name)</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Course.Course_NameTH)</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Course.Course_Year)</th>
+                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Dep_Credit)</th>
+                    <th style="text-align:center">จัดการข้อมูล</th>
+                </tr>
+            </thead>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Dep_Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Dep_Credit)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Course.Course_NameTH)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Dep_ID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Dep_ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Dep_ID })
-        </td>
-    </tr>
-}
-
-</table>
+            <tbody>
+                @foreach (var item in Model)
+                {
+                <tr>
+                    <td style="text-align:center">@(i++)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Dep_Name)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Course.Course_NameTH)</td>
+                    <td style="text-align:center">@Html.DisplayFor(modelItem => item.Course.Course_Year)</td>
+                    <td style="text-align:center">@Html.DisplayFor(modelItem => item.Dep_Credit)</td>
+                    <td style="text-align:center">
+                        <a class="btn btn-warning" href="@Url.Action("Edit", "Departments", new { id = item.Dep_ID })"><i class="fa fa-edit"></i>แก้ไข</a>
+                        @*<a class="btn btn-info" href="@Url.Action("Details", "Departments", new { id = item.Dep_ID })"><i class="fa fa-list-ul"></i> รายละเอียด</a>*@
+                        <a class="btn btn-danger" href="@Url.Action("Delete", "Departments", new { id = item.Dep_ID })"><i class="fa  fa-trash-o"></i> ลบ</a>
+                    </td>
+                </tr>
+                }
+            </tbody>
+        </table>
+    </div>
+</div>
