--- a/CSManagement/CSManagement/Views/Disposes/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Disposes/Index.cshtml
@@ -1,82 +1,104 @@
 ﻿@model IEnumerable<CSManagement.Models.Dispose>
 
 @{
-    ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
+    int i = 1;
 }
 
-<h2>การจำหน่าย</h2>
+<section class="content">
+    <div class="box box-default">
+        <div class="box-header with-border">
+            <h1 class="box-title">การจำหน่ายครุภัณฑ์</h1>
+        </div>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.CE_ATNO)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DIS_DateOUT)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DIS_DateAPP)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DIS_Status)
-        </th>
-        <th></th>
-    </tr>
+        <div class="box-body">
+            <table id="example1" class="table table-bordered table-striped" style="width:100%">
+                <thead style="font-size:18px">
+                    <tr>
+                        <th style="text-align:center">ที่</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.CE_ATNO)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.DIS_DateOUT)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.DIS_DateAPP)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.DIS_Status)</th>
+                        <th style="text-align:center">จัดการข้อมูล</th>
+                    </tr>
+                </thead>
 
-    @foreach (var item in Model)
-    {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.CE_ATNO)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DIS_DateOUT)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.DIS_DateAPP)
-            </td>
-            <td>
-                @* 1 = รอดำเนินการ / 2 = จำหน่ายแล้ว / 3 = ยกเลิกการจำหน่าย *@
-                @if (item.DIS_Status == 1)
-                {
-                    <span style="color:green">
-                        รอดำเนินการ
-                    </span>
-                }
-                else if (item.DIS_Status == 2)
-                {
-                    <span style="color:red">
-                        จำหน่ายแล้ว
-                    </span>
-                }
-                else if (item.DIS_Status == 3)
-                {
-                    <span style="color:blue">
-                        ยกเลิกการจำหน่าย
-                    </span>
-                }
-            </td>
-            @if (item.DIS_Status == 1)
-            {
-                <td>
-                    @Html.ActionLink("ยืนยัน", "DisposeAgree", new { id = item.CE_ATNO }) |
-                    @Html.ActionLink("ยกเลิก", "DisposeCancle", new { id = item.CE_ATNO })
-                </td>
-            }
-            else if (item.DIS_Status == 2)
-            {
-                <td>
-                   
-                </td>
-            }
-            else if (item.DIS_Status == 3)
-            {
-                <td>
-                    
-                </td>
-            }
-        </tr>
-    }
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td style="text-align:center">@(i++)</td>
+                            <td style="text-align:center">@Html.DisplayFor(modelItem => item.CE_ATNO)</td>
+                            <td>@Html.DisplayFor(modelItem => item.DIS_DateOUT)</td>
+                            <td>@Html.DisplayFor(modelItem => item.DIS_DateAPP)</td>
+                            <td>
+                                @* 1 = รอดำเนินการ / 2 = จำหน่ายแล้ว / 3 = ยกเลิกการจำหน่าย *@
+                                @if (item.DIS_Status == 1)
+                                {
+                                    <span style="color:#F8E507">
+                                        <i class="fa  fa-circle"></i>
+                                        รอดำเนินการ
+                                    </span>
+                                }
+                                else if (item.DIS_Status == 2)
+                                {
+                                    <span style="color:green">
+                                        <i class="fa  fa-check-circle"></i>
+                                        จำหน่ายแล้ว
+                                    </span>
+                                }
+                                else if (item.DIS_Status == 3)
+                                {
+                                    <span style="color:red">
+                                        <i class="fa fa-times-circle"></i>
+                                        ยกเลิกการจำหน่าย
+                                    </span>
+                                }
+                            </td>
+                            @if (item.DIS_Status == 1)
+                            {
+                                <td style="text-align:center">
+                                    <a class="btn btn-success" href="@Url.Action("DisposeAgree", new { id = item.CE_ATNO })"><i class="fa fa-check"></i> อนุมัติ</a>
+                                    <a class="btn btn-danger" href="@Url.Action("DisposeCancle", new { id = item.CE_ATNO })"><i class="fa fa-close"></i> ยกเลิก</a>
+                                </td>
+                            }
+                            else if (item.DIS_Status == 2)
+                            {
+                                <td></td>
+                            }
+                            else if (item.DIS_Status == 3)
+                            {
+                                <td></td>
+                            }
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</section>
 
-</table>
+<link href="~/Content/DataTables/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+
+@section Scripts{
+    <script src="~/Scripts/DataTables/jquery.dataTables.min.js"></script>
+    <script src="~/Scripts/DataTables/dataTables.bootstrap.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('#example1').DataTable({
+                scrollCollapse: true,
+                autoWidth: false,
+                responsive: true,
+                language: {
+                    url: "//cdn.datatables.net/plug-ins/1.10.19/i18n/Thai.json"
+                },
+                columnDefs: [{
+                    targets: "datatable-nosort",
+                    orderable: false
+                }]
+            });
+        });
+    </script>
+}
