--- a/CSManagement/CSManagement/Views/Teachers/Edit.cshtml
+++ b/CSManagement/CSManagement/Views/Teachers/Edit.cshtml
@@ -4,7 +4,7 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Teachers" ,FormMethod.Post, new { enctype="multipart/form-data", accept_charset="utf-8" }))
 {
     @Html.AntiForgeryToken()
     <section class="content">
