--- a/CSManagement/CSManagement/Views/Teachers/Index.cshtml
+++ b/CSManagement/CSManagement/Views/Teachers/Index.cshtml
@@ -5,45 +5,71 @@
     int i = 1;
 }
 
-<div class="box">
-    <div class="box-header">
-        <div class="row">
-            <div class="col-md-12 col-sm-12">
-                <h1 class="box-title">จัดการข้อมูลอาจารย์</h1>
-                <a class="btn btn-success" style="float: right" href="@Url.Action("Create", "Teachers")"><i class="fa fa-user-plus"></i> เพิ่มข้อมูลอาจารย์</a>
+<section class="content">
+    <div class="box box-default">
+        <div class="box-header with-border">
+            <div class="row">
+                <div class="col-md-12">
+                    <h1 class="box-title">จัดการข้อมูลอาจารย์</h1>
+                    <a class="btn btn-success" style="float: right" href="@Url.Action("Create", "Teachers")"><i class="fa fa-user-plus"></i> เพิ่มข้อมูลอาจารย์</a>
+                </div>
             </div>
         </div>
-    </div>
-    <div class="box-body">
-        <table id="example1" class="table table-bordered table-striped" style="width:100%">
-            <thead>
-                <tr>
-                    <th style="text-align:center">ที่</th>
-                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_ID)</th>
-                    <th style="text-align:center">ชื่อ-นามสกุล</th>
-                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_Export)</th>
-                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_Position)</th>
-                    <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_Img)</th>
-                    <th style="text-align:center">จัดการข้อมูล</th>
-                </tr>
-
-                @foreach (var item in Model)
-                {
+        <div class="box-body">
+            <table id="example1" class="table table-bordered table-striped" style="width:100%">
+                <thead>
                     <tr>
-                        <td style="text-align:center">@(i++)</td>
-                        <td style="text-align:center">@Html.DisplayFor(modelItem => item.Tea_ID)</td>
-                        <td>@item.Title.Title_Name @item.Tea_Name @item.Tea_Surname</td>
-                        <td>@Html.DisplayFor(modelItem => item.Tea_Export)</td>
-                        <td>@Html.DisplayFor(modelItem => item.Tea_Position)</td>
-                        <td class="text-center" style="padding:10px 10px 10px 10px"><img src="~/img/@item.Tea_Img" height="70" width="70" alt="Alternate Text" /></td>
-                        <td class="text-center">
-                            <a class="btn btn-warning" href="@Url.Action("Edit", "Teachers", new { id = item.Tea_ID })"><i class="fa fa-edit"></i> แก้ไข</a>
-                            <a class="btn btn-info" href="@Url.Action("Details", "Teachers", new { id = item.Tea_ID })"><i class="fa fa-list-ul"></i> รายละเอียด</a>
-                            <a class="btn btn-danger" href="@Url.Action("Delete", "Teachers", new { id = item.Tea_ID })"><i class="fa  fa-trash-o"></i> ลบ</a>
-                        </td>
+                        <th style="text-align:center">ที่</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_ID)</th>
+                        <th style="text-align:center">ชื่อ-นามสกุล</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_Export)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_Position)</th>
+                        <th style="text-align:center">@Html.DisplayNameFor(model => model.Tea_Img)</th>
+                        <th style="text-align:center">จัดการข้อมูล</th>
                     </tr>
-                }
+                </thead>
 
-        </table>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td style="text-align:center">@(i++)</td>
+                            <td style="text-align:center">@Html.DisplayFor(modelItem => item.Tea_ID)</td>
+                            <td>@item.Title.Title_Name @item.Tea_Name @item.Tea_Surname</td>
+                            <td>@Html.DisplayFor(modelItem => item.Tea_Export)</td>
+                            <td>@Html.DisplayFor(modelItem => item.Tea_Position)</td>
+                            <td class="text-center" style="padding:10px 10px 10px 10px"><img src="~/img/@item.Tea_Img" height="70" width="70" alt="Alternate Text" /></td>
+                            <td class="text-center">
+                                <a class="btn btn-warning" href="@Url.Action("Edit", "Teachers", new { id = item.Tea_ID })"><i class="fa fa-edit"></i> แก้ไข</a>
+                                <a class="btn btn-info" href="@Url.Action("Details", "Teachers", new { id = item.Tea_ID })"><i class="fa fa-list-ul"></i> รายละเอียด</a>
+                                <a class="btn btn-danger" href="@Url.Action("Delete", "Teachers", new { id = item.Tea_ID })"><i class="fa  fa-trash-o"></i> ลบ</a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
     </div>
-</div>
+</section>
+<link href="~/Content/DataTables/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+@section Scripts{
+    <script src="~/Scripts/DataTables/jquery.dataTables.min.js"></script>
+    <script src="~/Scripts/DataTables/dataTables.bootstrap.min.js"></script>
+
+    <script>
+        $(document).ready(function () {
+            $('#example1').DataTable({
+                scrollCollapse: true,
+                autoWidth: false,
+                responsive: true,
+                language: {
+                    url: "//cdn.datatables.net/plug-ins/1.10.19/i18n/Thai.json"
+                },
+                columnDefs: [{
+                    targets: "datatable-nosort",
+                    orderable: false
+                }]
+            });
+        });
+    </script>
+}
